# cmajor-rs

./: .build  .gitignore  .gitmodules  Cargo.toml  build.rs  readme.md  test.cmajor  test1.cmajor  test_2.cmajor
src/: lib.rs  main.rs
src/api/: build_settings.rs  diagnostic_messages.rs  endpoints.rs  engine.rs  external_variables.rs  mod.rs  performer.rs  program.rs
src/choc/: com.rs  mod.rs  value.rs
src/com/: database.rs  engine.rs  engine_factory.rs  library.rs  mod.rs  performer.rs  program.rs
src/helpers/: mod.rs
