[package]
name = "cmajor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
lazy_static = "1.4.0"
serde_json = { version = "1.0" }
# windows-interface = "0.53.0"

[profile.dev]
rpath = true
